# esm2quinox

./: .pre-commit-config.yaml  README.md  pyproject.toml
esm2quinox/: _esm2.py
tests/: conftest.py  requirements.sh  test_esm.py
